--- a/p_001_API/package.json
+++ b/p_001_API/package.json
@@ -41,6 +41,9 @@
     "inversify-express-utils": "^5.2.1",
     "inversify-logger-middleware": "^3.1.0",
     "pg": "^7.4.3",
-    "reflect-metadata": "^0.1.12"
+    "pg-hstore": "^2.3.2",
+    "reflect-metadata": "^0.1.12",
+    "sequelize": "^4.37.10",
+    "sequelize-typescript": "^0.6.6-beta.1"
   }
 }
