start implementation of inversify

--- a/p_001_API/package.json
+++ b/p_001_API/package.json
@@ -5,7 +5,7 @@
     "prebuild": "npm run lint",
     "build": "webpack --config webpack.config.js --env=dev",
     "prestart": "npm run build",
-    "start": "node ./build/p001-server.app.bundle.js",
+    "start": "nodemon node ./build/p001-server.app.bundle.js",
     "preprod": "npm test",
     "prod": "webpack --config webpack.config.js --env=prod",
     "prestart-prod": "npm run prod",
@@ -23,6 +23,8 @@
     "awesome-typescript-loader": "^4.0.1",
     "clean-webpack-plugin": "^0.1.19",
     "jest": "^22.4.2",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.17.5",
     "supertest": "^3.0.0",
     "ts-jest": "^22.4.1",
     "ts-node": "^3.2.0",
