--- a/p_001_API/package.json
+++ b/p_001_API/package.json
@@ -18,11 +18,13 @@
     "@types/body-parser": "^1.16.4",
     "@types/express": "^4.0.36",
     "@types/jasmine": "^2.8.6",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^8.0.13",
     "@types/supertest": "^2.0.4",
     "awesome-typescript-loader": "^4.0.1",
     "clean-webpack-plugin": "^0.1.19",
     "jest": "^22.4.2",
+    "morgan": "^1.9.0",
     "supertest": "^3.0.0",
     "ts-jest": "^22.4.1",
     "ts-node": "^3.2.0",
