--- a/p_001_API/p_001_APP/package.json
+++ b/p_001_API/p_001_APP/package.json
@@ -24,6 +24,8 @@
     "html-webpack-plugin": "^3.2.0",
     "inversify": "^4.13.0",
     "inversify-inject-decorators": "^3.1.0",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "node": "^9.0.0",
     "node-sass": "^4.9.0",
     "react": "^16.4.0",
