--- a/p_001_API/package.json
+++ b/p_001_API/package.json
@@ -38,8 +38,12 @@
   },
   "dependencies": {
     "@types/es6-promise": "^3.3.0",
+    "@types/express-session": "^1.15.10",
+    "@types/helmet": "0.0.38",
     "@types/pg": "^7.4.9",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "helmet": "^3.12.1",
     "inversify": "^4.11.1",
     "inversify-express-utils": "^5.2.1",
     "inversify-logger-middleware": "^3.1.0",
