--- a/p_001_APP/package.json
+++ b/p_001_APP/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.0",
+    "@types/react-router-dom": "^4.2.7",
     "awesome-typescript-loader": "^5.0.0",
     "axios": "^0.18.0",
     "babel-preset-stage-0": "^6.24.1",
@@ -30,6 +31,7 @@
     "node-sass": "^4.9.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1",
     "reflect-metadata": "^0.1.12",
     "sass-loader": "^7.0.1",
     "source-map-loader": "^0.2.3",
