--- a/p_001_APP/package.json
+++ b/p_001_APP/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@types/babel-types": "^7.0.2",
     "@types/core-js": "^0.9.46",
+    "@types/jss": "^9.5.3",
+    "@types/node": "^10.3.5",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.0",
@@ -25,11 +27,13 @@
     "html-webpack-plugin": "^3.2.0",
     "inversify": "^4.13.0",
     "inversify-inject-decorators": "^3.1.0",
+    "material-ui": "^1.0.0-beta.35",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "node": "^9.0.0",
     "node-sass": "^4.9.0",
     "react": "^16.4.0",
+    "react-dev-utils": "4.2.1",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
     "reflect-metadata": "^0.1.12",
