--- a/p_001_API/package.json
+++ b/p_001_API/package.json
@@ -37,16 +37,24 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.1",
     "@types/es6-promise": "^3.3.0",
     "@types/express-session": "^1.15.10",
     "@types/helmet": "0.0.38",
+    "@types/jsonwebtoken": "^7.2.7",
+    "@types/passport": "^0.4.5",
+    "@types/passport-jwt": "^3.0.1",
     "@types/pg": "^7.4.9",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "helmet": "^3.12.1",
     "inversify": "^4.11.1",
     "inversify-express-utils": "^5.2.1",
     "inversify-logger-middleware": "^3.1.0",
+    "jsonwebtoken": "^8.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "reflect-metadata": "^0.1.12",
