--- a/p_001_API/package.json
+++ b/p_001_API/package.json
@@ -44,6 +44,7 @@
     "@types/jsonwebtoken": "^7.2.7",
     "@types/passport": "^0.4.5",
     "@types/passport-jwt": "^3.0.1",
+    "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.4.9",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.2",
@@ -55,6 +56,7 @@
     "jsonwebtoken": "^8.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "reflect-metadata": "^0.1.12",
