--- a/p_001_MOB/package.json
+++ b/p_001_MOB/package.json
@@ -7,14 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/react-native": "^0.56.3",
     "react": "16.4.1",
     "react-native": "0.55.4",
-    "react-native-typescript-transformer": "^1.2.10",
-    "typescript": "^2.9.2"
+    "react-navigation": "^2.8.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.4.6",
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "2.1.0",
     "jest": "23.4.1",
