--- a/p_001_MOB/package.json
+++ b/p_001_MOB/package.json
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "inversify": "^4.13.0",
     "react": "16.4.1",
     "react-native": "0.55.4",
     "react-navigation": "^2.8.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
