--- a/p_001_MOB/package.json
+++ b/p_001_MOB/package.json
@@ -11,10 +11,12 @@
     "inversify": "^4.13.0",
     "react": "16.4.1",
     "react-native": "0.55.4",
+    "react-native-storage": "^0.2.2",
     "react-navigation": "^2.8.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "reflect-metadata": "^0.1.12"
+    "reflect-metadata": "^0.1.12",
+    "sync-storage": "^0.2.2"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
