--- a/p_001_MOB/package.json
+++ b/p_001_MOB/package.json
@@ -11,7 +11,10 @@
     "inversify": "^4.13.0",
     "react": "16.4.1",
     "react-native": "0.55.4",
+    "react-native-action-bar": "^2.0.5",
+    "react-native-animatable": "^1.3.0",
     "react-native-storage": "^0.2.2",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.8.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
