--- a/p_001_APP/package.json
+++ b/p_001_APP/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.3",
     "@types/redux": "^3.6.0",
+    "axios": "^0.18.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
